fix button spacing

--- a/style.scss
+++ b/style.scss
@@ -153,7 +153,7 @@ body {
       background-position: center;
       height: 70px;
       padding: 0;
-      width: 27%;
+      width: 30vw;
 
       &--active {
         color: white;
